@@ -1,0 +1,1 @@
+./cifvalues: file 'tests/cifvalues_005.inp' seems to be empty (no named datablocks)
