@@ -1,6 +1,8 @@
 cod-tools (unreleased)
 
   * Fixed:
+    - cifvalues:
+      - correcting detection of empty CIF files.
     - sdf_add_cod_data:
       - correcting the regular expression that filters out chemical names
         to take the potential whitespace prefix into account.
